--- a/dev/puppetserver.conf
+++ b/dev/puppetserver.conf
@@ -72,7 +72,8 @@ jruby-puppet: {
     master-log-dir: ${HOME}"/.puppetlabs/var/log"
 
     # (optional) maximum number of JRuby instances to allow
-    max-active-instances: 1
+    max-active-instances: 4
+    max-requests-per-instance: 10
 
     # (optional) Authorize access to Puppet master endpoints via rules
     # specified in the legacy Puppet auth.conf file (if true) or via rules
@@ -91,6 +92,8 @@ jruby-puppet: {
     # For testing running requests through a single JRuby instance. DO NOT ENABLE unless
     # explicitly testing this functionality.
     # multithreaded: true
+
+    borrow-timeout: 30000
 }
 
 # Settings related to HTTP client requests made by Puppet Server.
